Fixed inline code in documentation not wrapping (causing overflow and a scrollbar)
Fixed the header anchors not being added to documentation topics because the script that generated them was put in the header before jquery was loaded, and thus crashed

(continuation of css cleanup)

--- a/static2/css/doc.css
+++ b/static2/css/doc.css
@@ -36,11 +36,6 @@ h1:hover > .link-anchor {
   color: #111116;
 }
 
-code {
-  white-space: pre;
-  font-size: 110%;
-}
-
 .verb {
   padding: 3px 5px;
 }
@@ -64,6 +59,8 @@ th {
 }
 
 code {
+  white-space: pre-wrap;
+  font-size: 110%;
   background: #eee;
   border: 1px solid #ddd;
   border-radius: 3px;
